<resources>
    <string name="app_name">Engineeing College Selection</string>
    <string name="abhinav">Abhinav Education Society\'s College of Engineering and Technology</string>
    <string name="deemed">Bharati Vidyapeeth Deemed University College of Engineering</string>
    <string name="description_txt1">
Bharati Vidyapeeth University College Of Engineering (BVUCOE), a premier college was established in 1983 by Dr. Patangrao Kadam under Bharati Vidyapeeth Deemed University. It is aligned to the mission Social Transformation through Dynamic Education and is therefore committed to attain global standards where knowledge is the key driving force in the rapidly changing globalized economy.
        It is situated in Pune, Maharashtra. It offers under graduate and post graduate and Doctoral Engineering courses.
        <br>\n</br>
        <br>\n</br>
        <b>Address:</b>
         D-302, Medical College Rd, Shriram Nagar, Dhankawadi, Pune, Maharashtra 411043

        <br>\n</br>
        <br>\n</br>
        <b>Phone: </b>020 2440 7131

        <br>\n</br>
        <br>\n</br>
        <b>Fees per year:</b>120,613

        <br>\n</br>
        <br>\n</br>
        <b>Streams Available and Intake:</b>
        <br>\n</br>
        1.Computer Science Engineering (Intake:120 seats)
         <br>\n</br>
        2.Electronics and Telecommunication Engineering (Intake:120 seats)
         <br>\n</br>
        3.Mechanical Engineering (Intake:120 seats)
        <br>\n</br>
        4.Electronics Engineering (Intake:90 seats)
         <br>\n</br>
        5.Information Technology (Intake:60 seats)
         <br>\n</br>
        6.Production Engineering (Intake:60 seats)
         <br>\n</br>
        7.Chemical Engineering (Intake:60 seats)
         <br>\n</br>
        8.Electrical Engineering (Intake:60 seats)
         <br>\n</br>
        9.Civil Engineering (Intake:60 seats)

    </string>
    <string name="linktomap1">
        <a href="https://www.google.com/maps/dir/18.4955082,73.9757996/Bharti+Vidyapeeth+College+Of+Engineering,+D-302,+D-302,+Medical+College+Rd,+Shriram+Nagar,+Dhankawadi,+Pune,+Maharashtra+411043/@18.4769776,73.8453109,12z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3bc2eac706e502c7:0xac2628c7af8a6e88!2m2!1d73.8554715!2d18.4582936">For Direction CLICK HERE!</a>
    </string>
    <string name="pict">Pune Insitute of Computer Technology</string>
    <string name="description_txt3">Pune Institute Of Computer Technology (PICT), Pune  was the first institute to introduce a Computer Engineering branch among private colleges in the Maharashtra state.
    It was established by the Society for Computer Technology and Research in 1983
    It is approved by AICTE and affiliated to University of Pune
    The college is accredited by NAAC and is an ISO 9001:2008 certified institute
    PICT aspires to be the leader in technical education and research of international repute
        <br>/n</br>
        <br>\n</br>
        <b>Address:</b>
        Survey No. 27, Near Trimurti Chowk, Dhankawadi, Pune, Maharashtra 411043
        <br>\n</br>
        <br>\n</br>
        <b>Phone:</b> 020 2437 2041
        <br>\n</br>
        <br>\n</br>
        <b> Ranking: </b>
            PICT is ranked 16th among the top 50 private engineering colleges of India by Mint
        <br>\n</br>
        <br>\n</br>
        <b>Scholarship:</b>
            Meritorious students of PICT continue to get their National Merit and other Government Scholarships
        <br>\n</br>
        <br>\n</br>
        <b>Fees per year:</b> ₹96,000
        <br>\n</br>
        <br>\n</br>
        <b>Streams Available and Intake:</b>
        <br>\n</br>
        1.Computer Science Engineering (2 Courses i.e.,Morning and Afternoon Session)240 seats
        <br>\n</br>
        2.Electronics and Telecommunication Engineering (2 Courses i.e.,Morning and Afternoon Session)240 seats
        <br>\n</br>
        3.Information Technology (1 Course i.e.,Morning Session)1180 seats
    </string>
    <string name="linktomap3">
        <a href="https://www.google.com/maps/dir/18.615078,73.8170853/pict/@18.5345369,73.7678626,12z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3bc2eac85230ba47:0x871eddd0a8a0a108!2m2!1d73.8508336!2d18.4575421">For Direction CLICK HERE!</a>
    </string>
    <string name="vishwarkarma">Vishwakarma Institute of Technology</string>
    <string name="description_txt5">
    VIT is a Private Institute located in Bibwewadi, Pune (Maharashtra) that was established in the year 1983. The Institute is affiliated to Savitribai Phule Pune University and offers various UG, PG and Ph.D. courses. Admission to certain courses will be on the basis of Entrance Exams – JEE Main / MHT-CET (B.Tech), GATE / MHT-CET (M.Tech), MAH-MCA-CET (MCA).

        <br>\n</br>
        <br>\n</br>
        <b>Address:</b>
         666, Upper Indiranagar, Bibvewadi, Pune, Maharashtra 411037

        <br>\n</br>
        <br>\n</br>
        <b>Phone: </b> 02024202198

        <br>\n</br>
        <br>\n</br>
        <b>Fees per year:</b> ₹ 1.4 lakhs

        <br>\n</br>
        <br>\n</br>
        <b>Streams Available and Intake:</b>
          <br>\n</br>
        1.Mechanical Engineering (1 course) (Intake:180 seats)
          <br>\n</br>
        2.Computer Science Engineering (2 courses) (Intake:180 seats)
          <br>\n</br>
        3.Electronics Engineering (1 Course) (Intake:120 seats)
          <br>\n</br>
        4.Electronics and Telecommunication Engineering (2 Courses) (Intake:120 seats)
          <br>\n</br>
        5.Industrial Engineering (1 Course) (Intake:60 seats)
          <br>\n</br>
        6.Production Engineering (1 course) (Intake:60 seats)
          <br>\n</br>
        7.Chemical Engineering (1 Course) (Intake:60 seats)
          <br>\n</br>
        8.Instrumentation and Control Engineering (Intake:60 seats)
          <br>\n</br>
        9.Information Technology (Intake:60 seats)
    </string>
    <string name="linktomap5">
        <a href="https://www.google.com/maps/dir/18.4955082,73.9757996/vit+pune/@18.4812647,73.8466205,12z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3bc2ea950f616219:0x321bdae2cea9f064!2m2!1d73.867619!2d18.464077">For Direction CLICK HERE!</a>
    </string>
    <string name="siu">Symbiosis International University (SIU)</string>
    <string name="description_txt13">It is a deemed university which was established in 2002. SIU Pune comes under flagship of Symbiosis Society which is a non-profitable organization. It is a private coeducational, multi-institutional university having 19 academic institutions spread over nine campuses in Pune, Bangalore, Noida, and Nasik. The university offers various Graduate, Post Graduate and Diploma level programs and apart from regular courses.
        <br>\n</br>
        <b>Address:</b>Lavale, Mulshi, Pune, Maharashtra 412115
        <br>\n</br>
        <br>\n</br>
        <b>Phone:</b>
        0020 3911 6200
        <br>\n</br>
        <br>\n</br>
        <b>Scholarship:</b>
        Meritorious students continue to get their Government Merit Scholarships.
        <br>\n</br>
        <br>\n</br>
        <b>Fees per year:</b>RS.265,000
        <br>\n</br>
        <br>\n</br>
        <b>Streams Avaliable </b>
        <br>\n</br>
        1.CIVIL ENGINEERING
        <br>\n</br>
        2.COMPUTER SCIENCE
        <br>\n</br>
        3.ELECTRONICS and TELECOMMUNICATION ENGINEERING
        <br>\n</br>
        4.MECHANICAL ENGINEERING
        <br>\n</br>
        5.INFORMATION TECHNOLOGY
    </string>
    <string name="linktomap13">
        <a href="https://www.google.co.in/maps/place/Symbiosis+International/@18.5361095,73.7289951,17z/data=!3m1!4b1!4m5!3m4!1s0x3bc2bf9caf148cef:0x4b9133b7a228d7d0!8m2!3d18.5361044!4d73.7311838">For Direction CLICK HERE!</a>
    </string>
    <string name="nit">National Institutes of Technology (NITs)</string>
    <string name="description_txt17">
    NITs are autonomous public institutes of higher education, located in India. They are governed by the National Institutes of Technology Act, 2007, which declared them as institutions of national importance alongside Indian Institutes of Technology.
    The NIT Council is the supreme governing body of India\'s National Institutes of Technology (NIT) system and all 31 NITs are funded by the Government of India.
        <br>\n</br>
    Admission Process is common for all NITs.
        <br>\n</br>
    1.For Undergraduate Admission their is Joint Entrance Examination.Students are admitted according to their marks in JEE Advance exam for proceeding education in Bachelor of Technology (B.Tech.) and Bachelor of Architecture (B.Arch).
    <br>\n</br>
        2.For Post-graduate Admission their is Graduate Aptitude Test in Engineering(GATE) for proceeding education in Master of Technology (M.Tech.) and Master of Science (M.Sc.) programs.
        <br>\n</br>
        3. Common Admission Test is for Master of Business Administration (MBA) program
        <br>\n</br>
    4. NIMCET is for Master of Computer Applications (MCA) program.
    <b>NIT Colleges in India</b>
    There are overall <i>31 NIT Colleges</i> in India as follows:
        <br>\n</br>
     1.<u>  NIT Allahabad</u> in Uttar Pradesh<br>\n</br>
     2.<u>  NIT Bhopal</u> in Madhya Pradesh<br>\n</br>
     3.<u>  NIT Calicut</u> in  Kerala<br>\n</br>
     4.<u>  NIT Hamirpur</u> in Himachal Pradesh<br>\n</br>
     5.<u>  NIT Jaipur</u> in Rajasthan<br>\n</br>
     6.<u>  NIT Jalandhar</u> in Punjab<br>\n</br>
     7.<u>  NIT Jamshedpur</u> in Jharkhand<br>\n</br>
     8.<u>  NIT Kurukshetra</u> in Haryana
    </string>
    <string name="nit_maharashtra">
    9.<u><b>  NIT Nagpur </b>in Maharastra</u>
    </string>
    <string name="description_txt18">
     10.<u>NIT Rourkela</u> in Odisha<br>\n</br>
     11.<u>NIT Silchar</u> in Assam<br>\n</br>
     12.<u>NIT Karnataka</u> in Karnataka<br>\n</br>
     13.<u>NIT Warangal</u> in Telangana<br>\n</br>
     14.<u>NIT Durgapur</u> in West Bengal<br>\n</br>
     15.<u>NIT Srinagar</u> in  Jammu and Kashmir<br>\n</br>
     16.<u> NIT Surat</u> in Gujarat<br>\n</br>
     17.<u> NIT Trichy</u> in Tamil Nadu<br>\n</br>
     18.<u> NIT Patna</u> in Bihar<br>\n</br>
     19.<u>NIT Raipur</u> in Chhattisgarh<br>\n</br>
     20.<u> NIT Agartala</u> in Tripura<br>\n</br>
     21.<u> NIT Arunachal Pradesh</u> in Arunachal Pradesh<br>\n</br>
     22.<u>NIT Delhi</u> in Delhi<br>\n</br>
     23.<u> NIT Goa</u> in Goa<br>\n</br>
     24.<u> NIT Manipur</u> in Manipur<br>\n</br>
     25.<u> NIT Meghalaya</u> in Meghalaya<br>\n</br>
     26.<u> NIT Mizoram</u> in Mizoram<br>\n</br>
     27.<u>NIT Nagaland</u> in  Nagaland<br>\n</br>
     28.<u>NIT Puducherry</u> in Puducherry<br>\n</br>
     29.<u> NIT Sikkim</u> in Sikkim<br>\n</br>
     30.<u> NIT Uttarakhand</u> in Uttarakhand<br>\n</br>
     31.<u>NIT Andhra Pradesh</u> in Andhra Pradesh<br>\n</br>
    </string>
</resources>