<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    tools:context="com.sak.engineeingcollegeselection.NITActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nit"
        android:textColor="#000"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="23dp"
                android:text="@string/description_txt17"
                android:textColor="#000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nit_maharashtra"
                android:textColor="#000"
                android:textSize="18dp"
                android:layout_below="@+id/textView12"
                android:layout_alignLeft="@+id/textView12"
                android:layout_alignStart="@+id/textView12" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_txt18"
                android:textColor="#000"
                android:textSize="18dp"
                android:layout_below="@+id/textView8"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
