<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    tools:context="com.sak.engineeingcollegeselection.UserActivity4">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/pict"
        android:layout_marginBottom="314dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pict"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_txt3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp" />

            <!--<TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linktosite3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp" />-->

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linktomap3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
